fix header layout shift on project page

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,10 @@
   }
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   /* background: var(--background); */
   background: conic-gradient(#333, #222, #333);
